# soccer-api/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\GameMatchController;
 use App\Http\Controllers\TeamController;
 use App\Http\Controllers\PlayerController;
 use Illuminate\Http\Request;
@@ -20,14 +21,13 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
-Route::get('team', [TeamController::class, 'index']);
-Route::post('team', [TeamController::class, 'store']);
-Route::get('team/{id}', [TeamController::class, 'show']);
-Route::delete('team/{id}', [TeamController::class, 'destroy']);
-Route::put('team/{id}', [TeamController::class, 'update']);
+// Route::get('team', [TeamController::class, 'index']);
+// Route::post('team', [TeamController::class, 'store']);
+// Route::get('team/{id}', [TeamController::class, 'show']);
+// Route::delete('team/{id}', [TeamController::class, 'destroy']);
+// Route::put('team/{id}', [TeamController::class, 'update']);
 
-Route::get('player', [PlayerController::class, 'index']);
-Route::post('player', [PlayerController::class, 'store']);
-Route::get('player/{id}', [PlayerController::class, 'show']);
-Route::delete('player/{id}', [PlayerController::class, 'destroy']);
-Route::put('player/{id}', [PlayerController::class, 'update']);
+Route::apiResource('team', TeamController::class);
+Route::apiResource('player', PlayerController::class);
+
+Route::apiResource('game_match', GameMatchController::class);
